# derivedblog

./: .gitignore  Cargo.toml
client/: package-lock.json  package.json
client/src/: Router.bs.js  Router.re
client/src/pages/: Pages__Index.bs.js  Pages__Index.re
src/: main.rs
src/models/: db.rs  helpers.rs  mod.rs  post.rs  user.rs
src/routes/: index.rs
templates/: general.tera
