[package]
name = "rocket-blog-nyt"
version = "0.1.0"
authors = ["lastshadowpl <xeloxpl@windowslive.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
dotenv="0.14.1"
bson="0.13.0"
[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["serve", "json", "tera_templates", "mongodb_pool"]
